<resources>
    <string name="app_name">QR Scanner</string>
    <string name="cameraAccessTitle">Camera Access</string>
    <string name="cameraAccessDesc">Allow to access camera to scan..</string>
    <string name="allow">Allow</string>
    <string name="scan_activity_bottom_nav_create">Create</string>
    <string name="scan_activity_bottom_nav_scan">Scan</string>
    <string name="scan_activity_bottom_nav_history">History</string>
    <string name="scan_activity_bottom_nav_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_create_fragment">Hello create fragment</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="please_wait">Please Wait...</string>
    <string name="open">Open</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>

    <string name="activity_barcode_open_link">Open link</string>
    <string name="activity_barcode_open_bitcoin_url">Open in other app</string>
    <string name="activity_barcode_show_otp">Show password</string>
    <string name="activity_barcode_open_otp">Open in other app</string>
    <string name="activity_barcode_share_as_text">Share as text</string>
    <string name="activity_barcode_copy">Copy to clipboard</string>
    <string name="activity_barcode_save_as_text">Save as text</string>
    <string name="activity_barcode_search">Search on the web</string>
    <string name="activity_barcode_add_to_favorites">Add to favorites</string>
    <string name="activity_barcode_show_barcode_image">View code</string>
    <string name="activity_barcode_share_as_image">Share as image</string>
    <string name="activity_barcode_save_as_image">Save as image</string>
    <string name="activity_barcode_print">Print</string>
</resources>