<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ResultActivity">

    <!--<com.google.android.material.appbar.AppBarLayout style="@style/AppBarLayoutStyle">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarWithBackButtonStyle" />
    </com.google.android.material.appbar.AppBarLayout>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingTop="?android:attr/actionBarSize">


        <!--style="@style/ScrollStyle"-->
        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:clipToPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/_10sdp">

                <!--Barcode image-->
                <FrameLayout
                    android:id="@+id/layout_barcode_image_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:padding="@dimen/_10sdp"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/image_view_barcode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="centerInside"
                        android:visibility="gone" />
                </FrameLayout>

                <!--General barcode info-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_view_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_weight="1"
                        tools:text="01.09.1993 12:00" />

                    <ImageView
                        android:id="@+id/button_edit_name"
                        android:layout_width="@dimen/_16sdp"
                        android:layout_height="@dimen/_16sdp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:src="@drawable/ic_edit"
                        android:visibility="gone"
                        tools:visibility="visible" />
                </LinearLayout>

                <TextView
                    android:id="@+id/text_view_barcode_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    tools:text="Name" />

                <TextView
                    android:id="@+id/text_view_barcode_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:autoLink="all"
                    android:lineSpacingMultiplier="1.2"
                    tools:text="Content" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    app:layout_constraintTop_toBottomOf="@id/text_view_barcode_text">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imgOpen"
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:src="@drawable/ic_scan_open"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvOpen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/open"
                        app:layout_constraintEnd_toEndOf="@id/imgOpen"
                        app:layout_constraintStart_toStartOf="@id/imgOpen"
                        app:layout_constraintTop_toBottomOf="@id/imgOpen" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imgShare"
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:src="@drawable/ic_scan_share"
                        app:layout_constraintEnd_toStartOf="@id/imgCopy"
                        app:layout_constraintStart_toEndOf="@id/imgOpen"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvShare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/share"
                        app:layout_constraintEnd_toEndOf="@id/imgShare"
                        app:layout_constraintStart_toStartOf="@id/imgShare"
                        app:layout_constraintTop_toBottomOf="@id/imgShare" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imgCopy"
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:src="@drawable/ic_scan_copy"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvCopy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/copy"
                        app:layout_constraintEnd_toEndOf="@id/imgCopy"
                        app:layout_constraintStart_toStartOf="@id/imgCopy"
                        app:layout_constraintTop_toBottomOf="@id/imgCopy" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <!--<LinearLayout
                    android:id="@+id/nativeAdContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rvLanguage">

                    <include layout="@layout/native_template_with_shimmer" />
                </LinearLayout>-->

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp" />

                <!--Specific buttons-->
                <com.example.myapplication.views.IconButton
                    android:id="@+id/button_open_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:icon="@drawable/ic_link"
                    app:iconBackground="@color/color_5C5470"
                    app:text="@string/activity_barcode_open_link"
                    tools:visibility="visible" />

                <!--General-->
                <com.example.myapplication.views.IconButton
                    android:id="@+id/button_share_as_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/icon_share"
                    app:iconBackground="@color/color_5C5470"
                    app:text="@string/activity_barcode_share_as_text" />

                <com.example.myapplication.views.IconButton
                    android:id="@+id/button_copy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_copy"
                    app:iconBackground="@color/color_5C5470"
                    app:text="@string/activity_barcode_copy" />

                <com.example.myapplication.views.IconButton
                    android:id="@+id/button_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_search"
                    app:iconBackground="@color/color_5C5470"
                    app:text="@string/activity_barcode_search" />

                <com.example.myapplication.views.IconButton
                    android:id="@+id/button_save_as_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_download"
                    app:iconBackground="@color/color_5C5470"
                    app:text="@string/activity_barcode_save_as_text" />

                <com.example.myapplication.views.IconButton
                    android:id="@+id/button_share_as_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/icon_share"
                    app:iconBackground="@color/color_5C5470"
                    app:text="@string/activity_barcode_share_as_image" />

                <com.example.myapplication.views.IconButton
                    android:id="@+id/button_save_as_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_download"
                    app:iconBackground="@color/color_5C5470"
                    app:text="@string/activity_barcode_save_as_image" />

                <com.example.myapplication.views.IconButton
                    android:id="@+id/button_print"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_print"
                    app:iconBackground="@color/color_5C5470"
                    app:text="@string/activity_barcode_print" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>