<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".use_case.PermissionScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/backgroundLayer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/color_352F44">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="@id/backgroundLayer"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/qr_scan_camera_lottie" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/camera_permission_request_background"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingVertical="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="@id/backgroundLayer">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:text="@string/cameraAccessTitle"
                android:textColor="@color/color_5C5470"
                android:textSize="@dimen/_22sdp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingRight="@dimen/_15sdp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cameraAccessDesc"
                        android:textAlignment="center"
                        android:textColor="@color/color_5C5470"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/goIV"
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:gravity="center"
                    app:cardCornerRadius="@dimen/_30sdp">

                    <TextView
                        android:id="@+id/cameraPermissionButton"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@color/color_5C5470"
                        android:gravity="center"
                        android:paddingTop="@dimen/_4sdp"
                        android:text="@string/allow"
                        android:textAllCaps="true"
                        android:textColor="@color/color_FAF0E6"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>